Fix QSpinBox size calculation problem with stylesheets

Problem caused by change a317ee0a6fa76d1166f6da8593d39eaf7afce83c

Task-number: QTBUG-31602

Change-Id: Ie8948445a58f51946f21d567ba91f9f10b848f8b
Reviewed-by: Jens Bache-Wiig <jens.bache-wiig@digia.com>